--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 html, body {
     height: 100%;
     margin: 0px;
@@ -5,8 +8,55 @@ html, body {
     background-color: #f4f6f6;
 }
 .home-container {
-    max-width: 100%;
-    height: 100vh;
-    background: url("../Images/Smavators-bg.svg") no-repeat;
+    width: 100%;
+    height: 100%;
+}
+.nav-bar {
+    position:fixed;
+    background:#ffffff;
+    height: 66px;
+    width: 100%;
+    color: #404041;
+    z-index: 1;
+}
+.nav-bar .Logo {
+    position: relative;
+    margin-left: 15px; 
+    margin-top: -5px;
+}
+.toggle {
+    display: none;
+}
+#nav-menu {
+    float: right;
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+}
+#nav-menu li {
+    float: left;
+    position: relative;
+    margin-right: 2em;
+}
+#nav-menu li a {
+    display: block;
+    padding: 21px;
+    font-size: 1.1em;
+    color: #404041;
+    text-decoration: none;
+}
+#nav-menu li a:hover {
+    color: #00a79d;
+}
+.Landing-Pic .Bg-pic {
+    position: relative;
+    width: 100%;
+    height: 100%;
     background-size: cover;
+}
+.Landing-Pic h1 {
+    position: absolute;
+    bottom: 60%;
+    left: 25%;
+    color: #404041;
 }
